{UPDATE} Default Map

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -24,6 +24,8 @@ NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
 
 [/Script/EngineSettings.GameMapsSettings]
 GameInstanceClass=/Game/Blueprints/NewGameInstance.NewGameInstance_C
+EditorStartupMap=/Game/MainMenu.MainMenu
+GameDefaultMap=/Game/MainMenu.MainMenu
 
 [/Script/Engine.CollisionProfile]
 -Profiles=(Name="NoCollision",CollisionEnabled=NoCollision,ObjectTypeName="WorldStatic",CustomResponses=((Channel="Visibility",Response=ECR_Ignore),(Channel="Camera",Response=ECR_Ignore)),HelpMessage="No collision",bCanModify=False)
@@ -82,5 +84,3 @@ GameInstanceClass=/Game/Blueprints/NewGameInstance.NewGameInstance_C
 +CollisionChannelRedirects=(OldName="Dynamic",NewName="WorldDynamic")
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
-
-
